:wrench: chore: otimizando imagens

--- a/web/src/templates/home/styles.scss
+++ b/web/src/templates/home/styles.scss
@@ -19,7 +19,7 @@
 
 
 .img-home{
-  background: url('/background-home.jpg') center center no-repeat;
+  background: url('/background-home.webp') center center no-repeat;
   border-radius: 25px;
   height: 200px;
   display: flex;
