--- a/web/src/components/organisms/CardRecipe/styles.scss
+++ b/web/src/components/organisms/CardRecipe/styles.scss
@@ -54,7 +54,7 @@ $card-text-color:  #ffffff;
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('/background-card.jpg');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('/background-card.webp');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
