--- a/web/src/index.scss
+++ b/web/src/index.scss
@@ -55,17 +55,19 @@ body {
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 
   &::before {
+    contain: strict;
     content: '';
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('/background.png') center center no-repeat;
+    background: url('/background.webp') center center no-repeat;
     background-size: cover;
     filter: blur(4px) grayscale(50%);
     z-index: -1;
     pointer-events: none;
+    will-change: transform, filter;
   }
 }
 
