--- a/web/src/components/organisms/CardRecipe/styles.scss
+++ b/web/src/components/organisms/CardRecipe/styles.scss
@@ -7,9 +7,11 @@ $card-text-color:  #ffffff;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-width: 345px;
-  width: 100%;
+  width: 345px;
+
   height: 200px;
+
+  overflow-x: hidden;
 
 }
 
@@ -49,11 +51,9 @@ $card-text-color:  #ffffff;
 
 
 .card-bg {
-  position: fixed;
+  position: relative;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('/background-card.webp');
   background-position: center center;
   background-repeat: no-repeat;
